2007-02-01  Petr Ovtchenkov  <ptr@island.corbina.net>

	* thr_mgr.cc: reduce amount of code; try to 'join' to already
	closed threads, wait other in loop. [this is attempt to find
	workaround for deadlock within glibc, but speedup release
	already free resources too]

	* libxmt: version 1.9.5
	
2007-01-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* shm.h: add named objects manager in shared segment
	memory allocator;

	* xmt.h, xmt.cc: unification Semaphore with Condition
	and Mutex---ipc flag passed as template parameter.

2006-12-26  Petr Ovtchenkov  <ptr@island.corbina.net>

	* shm.h, shm.cc: shared memory-based allocator

	* libxmt: version 1.9.4

2006-12-15  Petr Ovtchenkov  <ptr@island.corbina.net>

	* time.h, time.cc: add timespec in xmt namespace, useful
	for conversions and inline objects; clean some code in
	timespec operations;
	
	* xmt.h: changes related to timespec in xmt namespace and in
	global namespace; now 'delay' functions family only in xmt
	namespace and go away from Thread class;

	* xmt.h, xmt.cc: add setting signal handler with siginfo.

2006-12-14  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: move 'fork' and 'become_daemon' from Thread
	class directly to namespace xmt; this may block usage
	of compilers without namespaces.

2006-12-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* thr_mgr.h, thr_mgr.cc: add join method.

2006-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: added xmt::getpid() and xmt:getppid(); ::getpid()
	really return cached value, so returned pid may be parent's pid
	really. I use syscall here and rewrite appropriate var during
	Thread::fork().

	* uid.h, uid.cc: code reorganization to avoid problems with order
	of static objects dtors calls and libraries unload order.

	* libxmt: version 1.9.3

2006-11-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.h, uid.cc: return hostid on Linux

	* libxmt: version 1.9.2

2006-10-31  Petr Ovtchenkov  <ptr@island.corbina.net>
